...
                                    <outlet property="beerNameLabel" destination="qwi-4u-klV" id="dpz-tz-cJJ"/>
                                    <outlet property="remoteImageView" destination="4ho-ET-smf" id="Zvq-1n-rfb"/>
                                </connections>
                            </tableViewCell>
                        </prototypes>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibility" value="resultTableView"/>
                        </userDefinedRuntimeAttributes>
                    </tableView>
                    <navigationItem key="navigationItem" id="cdA-dn-nxW"/>
                    <connections>
                        <segue destination="S33-O9-RCQ" kind="show" identifier="wholeBeerSegue" id="9LF-Qz-5Qg"/>
                    </connections>
...
